Rédaction du README

--- a/Model/Application_1.ipynb
+++ b/Model/Application_1.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AR(1) with uniform prior"
+    "# ARMA(p,q) with Dirichlet prior"
    ]
   },
   {
