--- a/Model/Application_1.ipynb
+++ b/Model/Application_1.ipynb
@@ -35,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# N=55 pays, longueur T=30 ans (entre 1995 et 2024), normalisé entre 0 et 1 par colonne\n",
+    "# N=55 pays, longueur T=30 ans (entre 1995 et 2024), normalisé entre 0 et 1 (par colonne et au global)\n",
     "GDP_30 = pd.read_csv('../Data preprocessing/GDP_yearly_30_colnormalized', index_col=0)\n",
     "GDP_global_30 = pd.read_csv('../Data preprocessing/GDP_yearly_30_global_normalized')"
    ]
@@ -53,11 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# N=71 pays, longueur T=25 ans (entre 2000 et 2024), normalisé entre 0 et 1 par colonne\n",
+    "# N=71 pays, longueur T=25 ans (entre 2000 et 2024), normalisé entre 0 et 1 (par colonne et au global)\n",
     "GDP_25 = pd.read_csv('../Data preprocessing/GDP_yearly_25_colnormalized', index_col=0)\n",
     "GDP_global_25 = pd.read_csv('../Data preprocessing/GDP_yearly_25_global_normalized')"
    ]
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Étape 1: Initialisation ---\n",
+    "# --- Étape 1: Initialisation --- Distribution a priori\n",
     "def initialize_model(y, K, e0=1.0):\n",
     "    \"\"\"\n",
     "    Initialise les paramètres du modèle.\n",
@@ -595,6 +595,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remarque : Dans la fonction précédente, on fait l'hypothèse d'indépendance conditionnelle, c'est-à-dire que l'on suppose les dimensions de 𝑦[𝑖] indépendantes étant donné 𝜃[𝑘]. Cela permet de calculer la probabilité jointe comme le produit des densités marginales."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -603,24 +610,24 @@
     "# --- Étape 3: Mise à jour des paramètres ---\n",
     "def update_theta(y, S, K):\n",
     "    \"\"\"\n",
-    "    Met à jour les paramètres spécifiques aux groupes (theta).\n",
+    "    Met à jour les paramètres spécifiques aux groupes (theta) en fonction des données de l'affectation actuelle.\n",
     "    \"\"\"\n",
     "    T = y.shape[1]\n",
     "    theta = []\n",
     "    for k in range(K):\n",
-    "        group_data = y[S == k]\n",
+    "        group_data = y[S == k]   # Contient toutes les séries appartenant au groupe k\n",
     "        if len(group_data) > 0:\n",
     "            theta_k = group_data.mean(axis=0)  # Posterior mean (simple estimation)\n",
     "        else:\n",
-    "            theta_k = np.random.randn(T)  # Cas sans données\n",
+    "            theta_k = np.random.randn(T)  # Cas sans données : valeur aléatoire d'une distribution gaussienne standard\n",
     "        theta.append(theta_k)\n",
     "    return theta\n",
     "\n",
-    "def update_eta(S, K, e0=1.0):\n",
+    "def update_eta_ignorance_structure(S, K, e0=1.0):\n",
     "    \"\"\"\n",
-    "    Met à jour les paramètres eta (structure d'ignorance).\n",
+    "    Met à jour les probabilités a priori des paramètres eta (structure d'ignorance) influencées  par la distribution actuelle des affectations S.\n",
     "    \"\"\"\n",
-    "    counts = np.bincount(S, minlength=K) + e0  # Comptes augmentés par le prior\n",
+    "    counts = np.bincount(S, minlength=K) + e0  # Comptes augmentés par le prior (nombre d'observations assignées à chaque groupe k + e0)\n",
     "    return dirichlet.rvs(counts, size=1).flatten()"
    ]
   },
@@ -642,7 +649,7 @@
     "        # Mise à jour de theta\n",
     "        theta = update_theta(y, S, K)\n",
     "        # Mise à jour de eta\n",
-    "        eta = update_eta(S, K, e0)\n",
+    "        eta = update_eta_ignorance_structure(S, K, e0)\n",
     "    return S, theta, eta"
    ]
   },
@@ -797,8 +804,8 @@
     "np.random.seed(42)\n",
     "\n",
     "# Conversion en tableau NumPy\n",
-    "y = GDP.values.T  # Transpose pour avoir (N, T)\n",
-    "print(y.shape)  # Doit afficher (69, 27)\n",
+    "y = GDP_global_25.values.T  # Transpose pour avoir (N, T)\n",
+    "print(y.shape)  \n",
     "\n",
     "K = 3  # Nombre de clusters\n",
     "num_iter = 500  # Nombre d'itérations pour le MCMC\n",
@@ -850,7 +857,8 @@
     "np.random.seed(42)\n",
     "\n",
     "# Conversion en tableau NumPy\n",
-    "y_global = GDP_global.values.T  # Transpose pour avoir (N, T)\n",
+    "y_global = GDP_global_30.values.T  # Transpose pour avoir (N, T)\n",
+    "print(y.shape)  \n",
     "\n",
     "K = 3  # Nombre de clusters\n",
     "num_iter = 500  # Nombre d'itérations pour le MCMC\n",
@@ -885,6 +893,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def arma_log_likelihood(y, theta, p, q):\n",
+    "    \"\"\"\n",
+    "    Calcule la vraisemblance logarithmique d'un modèle ARMA.\n",
+    "    y : série temporelle\n",
+    "    theta : paramètres ARMA\n",
+    "    \"\"\"\n",
+    "    # Placeholder : remplacer par une vraie implémentation\n",
+    "    return -0.5 * np.sum((y - np.convolve(y, theta, mode='same'))**2)\n",
+    "\n",
     "def sample_S_arma(y, theta, eta, p, q):\n",
     "    \"\"\"\n",
     "    Échantillonne les indicateurs de groupe S.\n",
@@ -908,6 +925,13 @@
     "    S = np.array([np.random.choice(K, p=probs[i]) for i in range(N)])\n",
     "    return S\n",
     "\n",
+    "def estimate_arma_params(y, p, q):\n",
+    "    \"\"\"\n",
+    "    Estime les paramètres ARMA pour un ensemble de séries.\n",
+    "    \"\"\"\n",
+    "    # Placeholder : remplacer par une vraie implémentation\n",
+    "    return np.random.randn(p + q)\n",
+    "\n",
     "def update_theta_arma(y, S, K, p, q):\n",
     "    \"\"\"\n",
     "    Met à jour les paramètres ARMA pour chaque groupe.\n",
@@ -917,23 +941,7 @@
     "        group_data = y[S == k]  # Séries assignées au groupe k\n",
     "        theta_k = estimate_arma_params(group_data, p, q)\n",
     "        theta.append(theta_k)\n",
-    "    return theta\n",
-    "\n",
-    "def arma_log_likelihood(y, theta, p, q):\n",
-    "    \"\"\"\n",
-    "    Calcule la vraisemblance logarithmique d'un modèle ARMA.\n",
-    "    y : série temporelle\n",
-    "    theta : paramètres ARMA\n",
-    "    \"\"\"\n",
-    "    # Placeholder : remplacer par une vraie implémentation\n",
-    "    return -0.5 * np.sum((y - np.convolve(y, theta, mode='same'))**2)\n",
-    "\n",
-    "def estimate_arma_params(y, p, q):\n",
-    "    \"\"\"\n",
-    "    Estime les paramètres ARMA pour un ensemble de séries.\n",
-    "    \"\"\"\n",
-    "    # Placeholder : remplacer par une vraie implémentation\n",
-    "    return np.random.randn(p + q)"
+    "    return theta"
    ]
   },
   {
@@ -963,7 +971,7 @@
     "        theta = update_theta_arma(y, S, K, p, q)\n",
     "\n",
     "        # Étape (b.2) : Mise à jour des probabilités de groupe eta\n",
-    "        eta = update_eta(S, K, e0)\n",
+    "        eta = update_eta_ignorance_structure(S, K, e0)\n",
     "\n",
     "        # Diagnostics ou suivi des progrès\n",
     "        if iter % 100 == 0:\n",
@@ -998,7 +1006,7 @@
     "np.random.seed(42)\n",
     "\n",
     "# Conversion en tableau NumPy\n",
-    "y_global = GDP_global.values.T  # Transpose pour avoir (N, T)\n",
+    "y_global = GDP_global_25.values.T  # Transpose pour avoir (N, T)\n",
     "\n",
     "K = 3  # Nombre de clusters\n",
     "num_iter = 500  # Nombre d'itérations pour le MCMC\n",
@@ -1037,7 +1045,7 @@
     "np.random.seed(42)\n",
     "\n",
     "# Conversion en tableau NumPy\n",
-    "y = GDP.values.T  # Transpose pour avoir (N, T)\n",
+    "y = GDP_30.values.T  # Transpose pour avoir (N, T)\n",
     "\n",
     "K = 3  # Nombre de clusters\n",
     "num_iter = 500  # Nombre d'itérations pour le MCMC\n",
@@ -1381,7 +1389,7 @@
     "np.random.seed(42)\n",
     "\n",
     "# Conversion en tableau NumPy\n",
-    "y_global = GDP_global.values.T  # Transpose pour avoir (N, T)\n",
+    "y_global = GDP_global_25.values.T  # Transpose pour avoir (N, T)\n",
     "K_max = 10\n",
     "num_iterations = 1000\n",
     "p, q = 1, 1\n",
@@ -1393,7 +1401,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1407,7 +1415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
