Ajout des consignes des étapes à suivre

--- a/Model/Application_1.ipynb
+++ b/Model/Application_1.ipynb
@@ -545,7 +545,9 @@
    "metadata": {},
    "source": [
     "## Premier exemple avec p(yi∣θk) gaussienne \n",
-    "(yi gaussienne de moyenne θk)"
+    "(yi gaussienne de moyenne θk)\n",
+    "\n",
+    "Les paramètres theta ne doivent pas être en dimension T + update du theta à reprendre avec la posterior"
    ]
   },
   {
@@ -876,6 +878,19 @@
    "metadata": {},
    "source": [
     "## Deuxième exemple avec un modèle ARMA(p, q)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) Mise à jour des paramètres selon la posterior avec ARMA + calculer p(y_i | theta_k) pour un modèle ARMA\n",
+    "\n",
+    "2) Chercher prior logit avec K > 2\n",
+    "\n",
+    "3) Vérifier la posterior Dirichlet\n",
+    "\n",
+    "4) Revoir estimation du nb de clusters optimal et bridge sampling"
    ]
   },
   {
