Ajout méthode logit

--- a/Model/Application_1.ipynb
+++ b/Model/Application_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "[5 rows x 60 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
        "[5 rows x 60 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1031,7 @@
     "\n",
     "print(\"Classification estimée : \", S_est)\n",
     "print(\"Paramètres des groupes : \", theta_est)\n",
-    "print(\"Paramètres eta : \", eta_est)"
+    "print(\"Paramètres eta : \", eta_est)\n"
    ]
   },
   {
@@ -1071,6 +1071,189 @@
     "print(\"Classification estimée : \", S_est)\n",
     "print(\"Paramètres des groupes : \", theta_est)\n",
     "print(\"Paramètres eta : \", eta_est)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Avec modèle logit pour la probabilité d'appartenance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "À modifier possiblement : pour calculer chaque coefficient $\\gamma_j$, on initialise avec une normale (ici choix de $\\mathcal(N)(0,1)$) mais à creuser : comment choisir les paramètres de la loi normale?\n",
+    "J'ai ajouté un intercept à z car dans les coefficients du modèle logit, il est marqué qu'il faut prendre K-1 car la K_ie coordonnée est la ligne de \"référence\" et d+1 car on veut un intercept (d'où l'indice +1). \n",
+    "On calcule l'intégrale selon la loi normale pour la likelihood étant donné qu'on a pris une logit de prior normale. \n",
+    "Pour update les paramètres $\\gamma$ de la logit, il est précisé dans l'article qu'on le fait via un algorithme de Metropolis Hastings car on n'a pas de forme explicite. La fonction update_gamma suit donc cette logique. \n",
+    "Enfin, on utilise un MCMC pour l'échantillonnage et l'update des paramètres. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification estimée :  [1 1 1 1 1 2 1 1 1 1 2 1 2 2 1 2 1 2 1 1 2 1 1 1 1 1 1 2 1 2 1 1 2 2 1 1 1\n",
+      " 1 1 1 2 2 2 2 1 1 1 2 1 2 1 1 1 2 1 1 1 1 1 1 1 2 2 1 2 1 1 1 1 1 1]\n",
+      "Paramètres des groupes :  [array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "       0., 0., 0., 0., 0., 0., 0., 0.]), array([0.04043609, 0.04101091, 0.04163687, 0.04256847, 0.04401313,\n",
+      "       0.04536101, 0.04688231, 0.04829583, 0.0486729 , 0.0470104 ,\n",
+      "       0.04859307, 0.04968587, 0.05042452, 0.05132295, 0.05234177,\n",
+      "       0.05338465, 0.05421808, 0.0556408 , 0.05689823, 0.05792697,\n",
+      "       0.05546169, 0.05877174, 0.06053192, 0.06175145, 0.04669895]), array([0.01340527, 0.01411242, 0.01496278, 0.01588369, 0.01706466,\n",
+      "       0.01841093, 0.02005405, 0.02205203, 0.02340757, 0.0244415 ,\n",
+      "       0.02651007, 0.02833431, 0.02992864, 0.03167184, 0.03356375,\n",
+      "       0.03563435, 0.03773366, 0.03998443, 0.04233392, 0.04435271,\n",
+      "       0.04418529, 0.0478131 , 0.04952853, 0.05172847, 0.04006782])]\n",
+      "Paramètres gamma :  [[-0.18289302  0.44070631  3.78493981]\n",
+      " [ 0.5656416   0.2193545   3.03767297]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.stats import norm\n",
+    "\n",
+    "def initialize_model_with_logit(y, z, K, d, mu_gamma=0, sigma_gamma=1):\n",
+    "    N, T = y.shape\n",
+    "    S = np.random.choice(K, size=N)  # Initial random group assignments\n",
+    "    theta = [np.random.randn(T) for _ in range(K)]  # Group-specific parameters\n",
+    "    gamma = np.random.normal(mu_gamma, sigma_gamma, size=(K - 1, d + 1))  # Logit coefficients\n",
+    "    return S, theta, gamma\n",
+    "\n",
+    "def sample_S_with_logit(y, z, theta, gamma):\n",
+    "    N = len(y)\n",
+    "    K = len(theta)\n",
+    "    S = np.zeros(N, dtype=int)\n",
+    "    for i in range(N):\n",
+    "        probs = []\n",
+    "        for k in range(K):\n",
+    "            z_with_intercept = np.append(z[i], 1)  # Add intercept term\n",
+    "            logit_prob = np.exp(z_with_intercept @ gamma[k - 1]) if k > 0 else 1\n",
+    "            likelihood = norm.pdf(y[i], loc=theta[k]).prod()\n",
+    "            probs.append(likelihood * logit_prob)\n",
+    "        probs = np.array(probs) / np.sum(probs)\n",
+    "        S[i] = np.random.choice(K, p=probs)\n",
+    "    return S\n",
+    "\n",
+    "def update_theta_arma(y, S, K):\n",
+    "    T = y.shape[1]\n",
+    "    theta = []\n",
+    "    for k in range(K):\n",
+    "        group_data = y[S == k]\n",
+    "        if len(group_data) > 0:\n",
+    "            theta_k = np.mean(group_data, axis=0)  # Group mean as an estimate\n",
+    "        else:\n",
+    "            theta_k = np.zeros(T)  # Default if no data assigned to group\n",
+    "        theta.append(theta_k)\n",
+    "    return theta\n",
+    "\n",
+    "def update_gamma(S, z, gamma, mu_gamma=0, sigma_gamma=1, step_size=0.1):\n",
+    "    K, d = gamma.shape\n",
+    "    gamma_new = gamma.copy()\n",
+    "    for k in range(K):\n",
+    "        gamma_proposal = gamma[k] + np.random.normal(0, step_size, size=d)\n",
+    "        log_prior_current = -0.5 * np.sum((gamma[k] - mu_gamma) ** 2) / sigma_gamma**2\n",
+    "        log_prior_proposal = -0.5 * np.sum((gamma_proposal - mu_gamma) ** 2) / sigma_gamma**2\n",
+    "\n",
+    "        log_likelihood_current = 0\n",
+    "        log_likelihood_proposal = 0\n",
+    "        for i in range(len(S)):\n",
+    "            z_with_intercept = np.append(z[i], 1)  # Add intercept for logit model\n",
+    "            logit_prob_current = np.exp(z_with_intercept @ gamma[k]) / (1 + np.exp(z_with_intercept @ gamma[k]))\n",
+    "            logit_prob_proposal = np.exp(z_with_intercept @ gamma_proposal) / (1 + np.exp(z_with_intercept @ gamma_proposal))\n",
+    "            log_likelihood_current += S[i] * np.log(logit_prob_current)\n",
+    "            log_likelihood_proposal += S[i] * np.log(logit_prob_proposal)\n",
+    "\n",
+    "        log_acceptance_ratio = (log_prior_proposal + log_likelihood_proposal) - (\n",
+    "            log_prior_current + log_likelihood_current\n",
+    "        )\n",
+    "\n",
+    "        if np.log(np.random.rand()) < log_acceptance_ratio:\n",
+    "            gamma_new[k] = gamma_proposal\n",
+    "    return gamma_new\n",
+    "\n",
+    "def mcmc_logit(y, z, K, num_iter):\n",
+    "    N, d = z.shape\n",
+    "    S, theta, gamma = initialize_model_with_logit(y, z, K, d)\n",
+    "    for iteration in range(num_iter):\n",
+    "        S = sample_S_with_logit(y, z, theta, gamma)  # Sample S\n",
+    "        theta = update_theta_arma(y, S, K)  # Update theta\n",
+    "        gamma = update_gamma(S, z, gamma)  # Update gamma\n",
+    "    return S, theta, gamma\n",
+    "\n",
+    "# Exécution pour des données réelles normalisées sur l'ensemble\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Conversion en tableau NumPy\n",
+    "y_global = GDP_global_25.values.T  # Transpose pour avoir (N, T)\n",
+    "\n",
+    "K = 3  # Nombre de clusters\n",
+    "num_iter = 500  # Nombre d'itérations pour le MCMC\n",
+    "d = 2\n",
+    "z = np.random.randn(N, d)  # Exogenous variables\n",
+    "\n",
+    "# Estimation MCMC\n",
+    "S_est, theta_est, gamma_est = mcmc_logit(y_global,z, K, num_iter)\n",
+    "\n",
+    "print(\"Classification estimée : \", S_est)\n",
+    "print(\"Paramètres des groupes : \", theta_est)\n",
+    "print(\"Paramètres gamma : \", gamma_est)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification estimée :  [1 1 2 1 2 2 1 2 2 2 2 2 1 2 1 1 2 2 2 1 2 2 2 1 1 2 1 1 1 1 2 2 1 1 2 1 1\n",
+      " 2 1 2 2 1 2 2 1 1 2 2 1 2 2 1 1 1 2]\n",
+      "Paramètres des groupes :  [array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]), array([0.03828192, 0.07067898, 0.11515017, 0.14091743, 0.17076468,\n",
+      "       0.2178586 , 0.23709931, 0.25624925, 0.28729609, 0.33652281,\n",
+      "       0.38592785, 0.44505631, 0.50760076, 0.52581065, 0.47253014,\n",
+      "       0.52521224, 0.56077227, 0.57394264, 0.60093533, 0.63326769,\n",
+      "       0.67416911, 0.71048434, 0.76576541, 0.80745666, 0.84115926,\n",
+      "       0.76112847, 0.88858582, 0.96190914, 0.99531731, 0.43880529]), array([0.00888367, 0.04314481, 0.07693001, 0.10566241, 0.13349746,\n",
+      "       0.18564737, 0.21801875, 0.25320814, 0.28869648, 0.34377019,\n",
+      "       0.3934657 , 0.46349687, 0.5348694 , 0.56518867, 0.49681415,\n",
+      "       0.53783274, 0.57362593, 0.58727143, 0.61184431, 0.64623541,\n",
+      "       0.67978372, 0.7210426 , 0.77670363, 0.8313963 , 0.87290646,\n",
+      "       0.78542542, 0.89092805, 0.94931831, 0.97790252, 0.45728508])]\n",
+      "Paramètres gamma :  [[ 0.47531345  0.97485199  3.83242066]\n",
+      " [-0.01468045 -0.43765028  3.62085184]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exécution pour des données réelles normalisées sur l'ensemble\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Conversion en tableau NumPy\n",
+    "y_global = GDP_30.values.T  # Transpose pour avoir (N, T)\n",
+    "\n",
+    "K = 3  # Nombre de clusters\n",
+    "num_iter = 500  # Nombre d'itérations pour le MCMC\n",
+    "d = 2\n",
+    "z = np.random.randn(N, d)  # Exogenous variables\n",
+    "\n",
+    "# Estimation MCMC\n",
+    "S_est, theta_est, gamma_est = mcmc_logit(y_global,z, K, num_iter)\n",
+    "\n",
+    "print(\"Classification estimée : \", S_est)\n",
+    "print(\"Paramètres des groupes : \", theta_est)\n",
+    "print(\"Paramètres gamma : \", gamma_est)"
    ]
   },
   {
@@ -1860,7 +2043,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
